[package]
    name = "morphology_wizard"
    version = "1.0.0"
    edition = "2021"
    description = "Create realistic neuron morphologies"
    authors = ["David McDougall <dam1784@rit.edu>"]
    license = "Proprietary"
    repository = ""

[lib]
    crate-type = ["cdylib", "rlib"]

[dependencies]
    bitvec = "1"
    chrono = { version = "0.4", features = ["clock"], default-features = false }
    kiddo = "4"
    pyo3 = { version = "0.21", features = ["extension-module", "multiple-pymethods", "serde"], optional = true }
    rand = "0.8"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
