[package]
    name        = "morphology_wizard"
    version     = "1.0.0"
    edition     = "2021"
    description = "Create realistic neuron morphologies"
    authors     = ["David McDougall <dam1784@rit.edu>"]
    license     = "MIT"
    repository  = "https://github.com/ctrl-z-9000-times/morphology_wizard"

[lib]
    crate-type = ["cdylib", "rlib"]

[[bin]]
    name = "morphology_wizard"
    path = "src/main.rs"
    required-features = ["tauri-app"]

[build-dependencies]
    tauri-build = { version = "1.5", features = [], optional = true }

[dependencies]
    bitvec = "1"
    chrono = { version = "0.4", features = ["clock"], default-features = false }
    kiddo  = "4"
    pyo3   = { version = "0.21", features = ["extension-module", "multiple-pymethods", "serde"], optional = true }
    rand   = "0.8"
    serde  = { version = "1", features = ["derive"] }
    serde_json = "1"
    tauri  = { version = "1.7", features = [ "global-shortcut-all", "window-set-fullscreen", "window-unminimize", "window-set-focus", "window-close", "dialog-confirm"], optional = true }
    thiserror  = { version = "1" }
    tokio      = { version = "1", features = ["time"], optional = true }
    webbrowser = { version = "1", features = ["hardened"], optional = true }

[features]
    # this feature is used for production builds or when `devPath` points to the
    # filesystem and the built-in dev server is disabled.
    # If you use cargo directly instead of tauri's cli you can use this feature
    # flag to switch between tauri's `dev` and `build` modes.
    # DO NOT REMOVE!!
    custom-protocol = [ "tauri/custom-protocol" ]
    tauri-app = ["tauri", "tauri-build", "tokio", "webbrowser"]

[profile.release]
    lto = true
    codegen-units = 1
    strip = "debuginfo"

[profile.wasm-release]
    inherits  = "release"
    opt-level = "s"
    strip     = "symbols"
