[package]
    name = "morphology_wizard_app"
    version = "1.0.0"
    edition = "2021"
    description = "Create realistic neuron morphologies"
    authors = ["David McDougall <dam1784@rit.edu>"]
    license = ""
    repository = ""
    publish = false

[build-dependencies]
    tauri-build = { version = "1.5.0", features = [] }

[dependencies]
    bevy = { version = "0.14", default-features = true }
    kiddo = "4.2"
    morphology_wizard = { path =  ".." }
    rand = "0.8"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    tauri = { version = "1.5.2", features = ["dialog-confirm"] }

[features]
    # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
    # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
    # DO NOT REMOVE!!
    custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
    opt-level = 3
    lto = true
    codegen-units = 1
    incremental = false
    debug = false
    strip = "debuginfo"

[profile.wasm-release]
    inherits = "release"
    opt-level = "s"
    strip = "symbols"
